YA ESTA APTO PARA TODO DISPOSITIVO

--- a/src/app/pages/Shop/tienda/tienda.page.html
+++ b/src/app/pages/Shop/tienda/tienda.page.html
@@ -33,8 +33,8 @@
           <ion-card-title class="ion-title">Audífonos gamers<br>rojos con negro</ion-card-title>
           <ion-card-content>
             <td>{{ dinero | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button  color="dark" [routerLink]="['/ag3']">Ver detalles</ion-button>
-            <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons"  color="dark" [routerLink]="['/ag3']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -45,8 +45,8 @@
           <ion-card-title class="ion-title">Audífonos gamers<br>negro con naranja</ion-card-title>
           <ion-card-content>
             <td>{{ dinero2 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button  color="dark" [routerLink]="['/ag4']">Ver detalles</ion-button>
-            <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" color="dark" [routerLink]="['/ag4']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -57,8 +57,8 @@
           <ion-card-title class="ion-title">Audífonos gamers<br>lila con blanco</ion-card-title>
           <ion-card-content>
             <td>{{ dinero3 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button  color="dark" [routerLink]="['/ag5']">Ver detalles</ion-button>
-            <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" color="dark" [routerLink]="['/ag5']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -74,8 +74,8 @@
           <ion-card-title class="ion-title">Audífonos Bluetooth<br>morados</ion-card-title>
           <ion-card-content>
             <td>{{ dinero4 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button  color="dark" [routerLink]="['/ai1']">Ver detalles</ion-button>
-            <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" color="dark" [routerLink]="['/ai1']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -86,8 +86,8 @@
           <ion-card-title class="ion-title">Audífonos Bluetooth<br>azules</ion-card-title>
           <ion-card-content>
             <td>{{ dinero5 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button  color="dark" [routerLink]="['/ai4']">Ver detalles</ion-button>
-            <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" color="dark" [routerLink]="['/ai4']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -98,8 +98,8 @@
           <ion-card-title class="ion-title">Audífonos Bluetooth<br>verdes</ion-card-title>
           <ion-card-content>
             <td>{{ dinero6 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button  color="dark" [routerLink]="['/ai6']">Ver detalles</ion-button>
-            <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" color="dark" [routerLink]="['/ai6']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -116,8 +116,8 @@
           <ion-card-title class="ion-title">Reloj Analógico<br>negro con azules</ion-card-title>
           <ion-card-content>
             <td>{{ dinero7 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button  color="dark" [routerLink]="['/r3']">Ver detalles</ion-button>
-            <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" color="dark" [routerLink]="['/r3']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -128,8 +128,8 @@
           <ion-card-title class="ion-title">Reloj Analógico <br>negro fondo azul</ion-card-title>
           <ion-card-content>
             <td>{{ dinero8 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button  color="dark" [routerLink]="['/r4']">Ver detalles</ion-button>
-            <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" color="dark" [routerLink]="['/r4']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -140,8 +140,8 @@
           <ion-card-title class="ion-title">Reloj Analógico <br>amarillo con negro</ion-card-title>
           <ion-card-content>
             <td>{{ dinero9 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button  color="dark" [routerLink]="['/r5']">Ver detalles</ion-button>
-            <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" color="dark" [routerLink]="['/r5']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -158,8 +158,8 @@
           <ion-card-title class="ion-title">Reloj Digital negro<br> con borde azul</ion-card-title>
           <ion-card-content>
             <td>{{ dinero10 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button  color="dark" [routerLink]="['/rd2']">Ver detalles</ion-button>
-            <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" color="dark" [routerLink]="['/rd2']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -170,8 +170,8 @@
           <ion-card-title class="ion-title">Reloj Digital<br>negro</ion-card-title>
           <ion-card-content>
             <td>{{ dinero11 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button  color="dark" [routerLink]="['/rd5']">Ver detalles</ion-button>
-            <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" color="dark" [routerLink]="['/rd5']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -182,8 +182,8 @@
           <ion-card-title class="ion-title">Reloj Digital<br>blanco</ion-card-title>
           <ion-card-content>
             <td>{{ dinero12 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button  color="dark" [routerLink]="['/rd6']">Ver detalles</ion-button>
-            <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" color="dark" [routerLink]="['/rd6']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -194,47 +194,41 @@
     <ion-card-title>Relojes Smartwatch</ion-card-title>
     <!--PRIMER PRODUCTO-->
     <ion-row>
-      <p [routerLink]="['/rs1']">
         <ion-card>
           <ion-img src="assets/SMARTWATCH/rs1.webp" alt="aqui habia una imagen"></ion-img>
           <ion-card-header>
             <ion-card-title class="ion-title">Reloj Smartwatch<br>Azul</ion-card-title>
             <ion-card-content>
               <td>{{ dinero13 | currency:'USD':'symbol':'4.0-0' }}</td>
-              <ion-button  color="dark" [routerLink]="['/rs1']">Ver detalles</ion-button>
-              <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+              <ion-button class="center-buttons" color="dark" [routerLink]="['/rs1']">Ver detalles</ion-button>
+              <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
-      </p>
       <!--SEGUNDO PRODUCTO-->
-      <p [routerLink]="['/rs3']">
         <ion-card>
           <ion-img src="assets/SMARTWATCH/rs2.jpeg" alt="aqui habia una imagen"></ion-img>
           <ion-card-header>
             <ion-card-title class="ion-title">Reloj Smartwatch<br>anaranjado</ion-card-title>
             <ion-card-content>
               <td>{{ dinero14 | currency:'USD':'symbol':'4.0-0' }}</td>
-              <ion-button  color="dark" [routerLink]="['/rs3']">Ver detalles</ion-button>
-              <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+              <ion-button class="center-buttons" color="dark" [routerLink]="['/rs3']">Ver detalles</ion-button>
+              <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
-      </p>
       <!--TERCER PRODUCTO-->
-      <p [routerLink]="['/rs5']">
         <ion-card>
           <ion-img src="assets/SMARTWATCH/rs3.jpeg" alt="aqui habia una imagen"></ion-img>
           <ion-card-header>
             <ion-card-title class="ion-title">Reloj Smartwatch<br>morado</ion-card-title>
             <ion-card-content>
               <td>{{ dinero15 | currency:'USD':'symbol':'4.0-0' }}</td>
-              <ion-button  color="dark" [routerLink]="['/rs5']">Ver detalles</ion-button>
-              <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+              <ion-button class="center-buttons" color="dark" [routerLink]="['/rs5']">Ver detalles</ion-button>
+              <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
-      </p>
     </ion-row>
   </ion-grid>
 
