--- a/src/app/pages/productos/r3/r3.page.html
+++ b/src/app/pages/productos/r3/r3.page.html
@@ -2,24 +2,21 @@
   <app-componente1></app-componente1>
 </ion-header>
 
-  <!--################################################PRODUCTOS########################################-->
+<!--################################################PRODUCTOS########################################-->
 
 <ion-content class="ion-padding">
   <div class="card-container">
     <ion-card class="custom-card">
       <img src="assets/RELOJES ANALOGO/r3.webp" alt="" class="card-image">
       <ion-card-content class="card-content">
-        <ion-card-title class="titulo" style="font-size: 50px;">Reloj Analógico Negro con toques azules</ion-card-title>
+        <ion-card-title class="titulo">Reloj Analógico Negro con azules</ion-card-title>
         <p class="subti" style="font-size: 25px;">Precio: $119.000</p>
         <p class="subti">Descripción:</p>
-        <p>Reloj analógico negro con acentos
-           en azul, une elegancia y modernidad
-            en un solo accesorio. Perfecto para
-             quienes buscan un estilo sofisticado
-              con un toque de color audaz en su reloj de pulsera.</p>
-          <br>
-          <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
-
+        <p>Este reloj negro con acentos
+          en azul, une elegancia y modernidad.
+          Perfecto para quienes buscan un estilo sofisticado
+          con un toque de color audaz en su reloj de pulsera.</p>
+        <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
       </ion-card-content>
     </ion-card>
   </div>
