--- a/src/app/pages/productos/r4/r4.page.html
+++ b/src/app/pages/productos/r4/r4.page.html
@@ -9,18 +9,14 @@
       <img src="assets/RELOJES ANALOGO/r4.jpeg" alt="" class="card-image">
       <ion-card-content class="card-content">
         <ion-card-title class="titulo">Reloj Analógico negro fondo azul</ion-card-title>
-        <br>
         <p class="subti" style="font-size: 25px;">Precio: $194.990</p>
-        <br>
         <p class="subti">Descripción:</p>
-        <p>Reloj analógico con esfera en tono negro y
+        <p>Este reloj con esfera en tono negro y
            fondo azul, fusiona elegancia y un toque de
             originalidad. Ideal para aquellos que 
             buscan un reloj clásico pero con un detalle 
-            único que resalta su estilo..</p>
-          <br>
+            único que resalta su estilo.</p>
           <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
-
       </ion-card-content>
     </ion-card>
   </div>
