--- a/src/app/pages/productos/r5/r5.page.html
+++ b/src/app/pages/productos/r5/r5.page.html
@@ -1,24 +1,20 @@
 <ion-header [translucent]="true">
   <app-componente1></app-componente1>
 </ion-header>
-  <!--################################################PRODUCTOS########################################-->
+<!--################################################PRODUCTOS########################################-->
 <ion-content class="ion-padding">
   <div class="card-container">
     <ion-card class="custom-card">
       <img src="assets/RELOJES ANALOGO/r5.jpg" alt="" class="card-image">
       <ion-card-content class="card-content">
-        <ion-card-title class="titulo">Reloj Analógico amarillo fondo negro</ion-card-title>
-        
+        <ion-card-title class="titulo">Reloj Analógico amarillo con negro</ion-card-title>
         <p class="subti" style="font-size: 25px;">Precio: $289.000</p>
-        
         <p class="subti">Descripción:</p>
         <p>Reloj analógico en amarillo con fondo negro,
-           aporta un contraste audaz y llamativo. Perfecto
-            para quienes buscan un reloj que destaque con un
-             toque de color vibrante en su muñeca, sin dejar de ser elegante.</p>
-
-          <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
-
+          aporta un contraste audaz y llamativo. Perfecto
+          para quienes quieran destacar con un
+          toque de color vibrante en su muñeca, sin dejar de ser elegante.</p>
+        <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
       </ion-card-content>
     </ion-card>
   </div>
