--- a/src/app/pages/productos/rd6/rd6.page.html
+++ b/src/app/pages/productos/rd6/rd6.page.html
@@ -9,7 +9,6 @@
       <img src="assets/digitales/rd6.jpeg" alt="" class="card-image">
       <ion-card-content class="card-content">
         <ion-card-title class="titulo">Reloj Digital blanco</ion-card-title>
-        <br>
         <p class="subti" style="font-size: 25px;">Precio: $194.990</p>
         <p class="subti">Descripción:</p>
         <p>Reloj digital blanco, combina 
@@ -17,9 +16,8 @@
           manera moderna. Perfecto 
           para quienes buscan un reloj 
           que resalte con un toque de color 
-          y una pantalla clara para ver la hora y más.</p>
+          y una pantalla clara.</p>
         <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
-
       </ion-card-content>
     </ion-card>
   </div>
