--- a/src/app/pages/productos/rs3/rs3.page.html
+++ b/src/app/pages/productos/rs3/rs3.page.html
@@ -8,11 +8,10 @@
     <ion-card class="custom-card">
       <img src="assets/SMARTWATCH/rs2.jpeg" alt="" class="card-image">
       <ion-card-content class="card-content">
-        <ion-card-title class="titulo">Reloj Digital Anaranjado</ion-card-title>
-        <br>
+        <ion-card-title class="titulo">Reloj smartwatch naranja </ion-card-title>
         <p class="subti" style="font-size: 25px;">Precio: $240.000</p>
         <p class="subti">Descripción:</p>
-        <p>El Reloj Smartwatch Anaranjado 
+        <p>Este reloj
           combina estilo y tecnología. Con 
           pantalla táctil, se enlaza con tu 
           teléfono para notificaciones y 
@@ -20,7 +19,6 @@
           color naranja y opciones de personalización 
           lo hacen funcional y a la moda.</p>
         <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
-
       </ion-card-content>
     </ion-card>
   </div>
