--- a/src/app/pages/productos/rs5/rs5.page.html
+++ b/src/app/pages/productos/rs5/rs5.page.html
@@ -9,18 +9,15 @@
       <img src="assets/SMARTWATCH/rs3.jpeg" alt="" class="card-image">
       <ion-card-content class="card-content">
         <ion-card-title class="titulo"> Reloj Smartwatch morado</ion-card-title>
-        <br>
         <p class="subti" style="font-size: 25px;">Precio: $360.000</p>
         <p class="subti">Descripción:</p>
-        <p>El Reloj Smartwatch Morado fusiona
+        <p>Este reloj fusiona
           moda y funcionalidad. Con pantalla
           táctil, se conecta a tu teléfono
           para notificaciones y monitoreo
-          de salud. Su distintivo color
-          morado y opciones de personalización
-          lo convierten en un accesorio elegante y útil.</p>
+          de salud. Su color y sus opciones de personalización
+          lo convierten en un reloj elegante y útil.</p>
         <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
-
       </ion-card-content>
     </ion-card>
   </div>
