--- a/src/app/pages/categoria/audigamer/audigamer.page.scss
+++ b/src/app/pages/categoria/audigamer/audigamer.page.scss
@@ -34,14 +34,14 @@ ion-img.img-container {
 
 p {
     color: white;
-    font-size: 20px;
-    text-align: left;
+    font-size: 30px;
+    text-align: center;
     font-family: 'ADLaM Display', cursive;
 }
 
 ion-card-title {
     color: white;
-    font-size: 50px;
+    font-size: 40px;
     margin: 5px;
     text-align: center;
     font-family: 'DM Serif Display', serif;
@@ -50,7 +50,7 @@ ion-card-title {
 .ion-title {
     color: white;
     font-family: 'DM Serif Display', serif;
-    font-size: 25px;
+    font-size: 20px;
     text-align: left;
     margin: 5px;
 }
