--- a/src/app/pages/categoria/relojsma/relojsma.page.scss
+++ b/src/app/pages/categoria/relojsma/relojsma.page.scss
@@ -1,73 +1,61 @@
+/* Estilos para las imágenes */
 ion-img {
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
 }
 
+/* Estilos generales para las tarjetas */
 ion-card {
     background-color: #222222;
     width: fit-content;
     height: max-content;
 }
 
-ion-grid {
-    ion-row {
-        display: flex;
-        justify-content: center;
-        /* Centrar horizontalmente */
-        margin: 0 auto;
-        /* Margen superior e inferior igual a 0 y margen lateral automático para centrar en el medio */
-
-        ion-card {
-            margin: 10px;
-            /* Margen entre las tarjetas */
-            max-width: 300px;
-            /* Ancho máximo de las tarjetas */
-
-            ion-img.img-container {
-                max-width: 100%;
-                /* Asegurarse de que la imagen no exceda el ancho de la tarjeta */
-                height: auto;
-                /* Mantener la proporción de aspecto */
-            }
-        }
-    }
+/* Estilos para el grid y las tarjetas */
+ion-grid ion-row {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
 }
 
-//titulos
+ion-grid ion-card {
+    margin: 10px;
+    max-width: 250px; /* Ajusta el ancho de las tarjetas para hacerlas más angostas */
+}
 
+ion-img.img-container {
+    max-width: 100%;
+    height: auto;
+}
+
+/* Estilos para los títulos y textos */
 @import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Tilt+Prism&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
 
-
-
 p {
     color: white;
-    font-size: 20px;
-    text-align: left;
+    font-size: 30px;
+    text-align: center;
     font-family: 'ADLaM Display', cursive;
 }
 
 ion-card-title {
     color: white;
-    font-size: 55px;
+    font-size: 40px;
     margin: 5px;
     text-align: center;
     font-family: 'DM Serif Display', serif;
 }
-.ion-title{
+
+.ion-title {
     color: white;
     font-family: 'DM Serif Display', serif;
-    font-size: 30px;
-    text-align: center;
+    font-size: 20px;
+    text-align: left;
     margin: 5px;
 }
-@media(width:412px) or (width: 425px) or (width: 389px){
-    ion-card-title{
-        font-size: 40px;
-    }
-    
 
-}
+/* Estilos para el fondo */
 ion-content {
     --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
 }
