--- a/src/app/pages/inicio/registro/registro.page.scss
+++ b/src/app/pages/inicio/registro/registro.page.scss
@@ -13,7 +13,8 @@ ion-input {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: #222222; /* Color de fondo */
+  background: #222222;
+  /* Color de fondo */
 }
 
 /* Estilo para las tarjetas de entrada */
@@ -24,7 +25,8 @@ ion-input {
   border-radius: 10px;
   box-shadow: 0px 2px 6px rgb(0, 162, 255);
   background-color: #222222;
-  margin: 50px auto 0 auto; /* Margen superior de 40px, centrar horizontalmente */
+  margin: 50px auto 0 auto;
+  /* Margen superior de 40px, centrar horizontalmente */
 }
 
 /* Estilo para los mensajes de error */
@@ -39,7 +41,8 @@ ion-input {
   --padding-start: 15px;
   --padding-end: 15px;
   --border-radius: 8px;
-  line-height: 2.5; /* Ajusta el valor según tus preferencias */
+  line-height: 2.5;
+  /* Ajusta el valor según tus preferencias */
   margin-bottom: 15px;
   background-color: #222222;
 }
@@ -47,13 +50,16 @@ ion-input {
 ion-card-title {
   color: white;
   text-align: center;
-  font-size: 40px; /* Ajusta el tamaño del título según tus preferencias */
+  font-size: 40px;
+  /* Ajusta el tamaño del título según tus preferencias */
 }
 
-/* Ajustes para dispositivos específicos */
-@media (max-width: 425px) and (height: 857px) {
-  ion-card-title {
-    text-align: center;
-    font-size: 30px; /* Ajusta el tamaño del título para pantallas más pequeñas */
-  }
+p {
+  text-align: justify;
+}
+
+ion-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
