--- a/src/app/pages/productos/ag3/ag3.page.html
+++ b/src/app/pages/productos/ag3/ag3.page.html
@@ -8,16 +8,11 @@
         <img src="assets/AUDIFONOS GAMERS/ag3.webp" alt="" class="card-image">
         <ion-card-content class="card-content">
           <ion-card-title class="titulo">Audífonos gamers rojos con negro</ion-card-title>
-          <br>
           <p class="subti" style="font-size: 25px;">Precio: $50.000</p>
           <p class="subti">Descripción:</p>
           <p>Auriculares gamer rojos con diseño llamativo y 
-            elegante, brindando sonido inmersivo y comodidad 
-            con almohadillas suaves, perfectos para jugadores
-             que buscan estilo y rendimiento en uno.</p>
-          <br>
+            elegante, brindando sonido inmersivo y comodidad en sus oidos.</p>
           <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
-
         </ion-card-content>
       </ion-card>
     </div>
