--- a/src/app/pages/productos/ag4/ag4.page.html
+++ b/src/app/pages/productos/ag4/ag4.page.html
@@ -9,16 +9,12 @@
       <img src="assets/AUDIFONOS GAMERS/ag4.jpeg" alt="" class="card-image">
       <ion-card-content class="card-content">
         <ion-card-title class="titulo">Audífonos gamers negro con naranja</ion-card-title>
-        <br>
         <p class="subti" style="font-size: 25px;">Precio: $75.000</p>
         <p class="subti">Descripción:</p>
         <p>Auriculares gamer en negro con toques anaranjados
           que ofrecen sonido envolvente, comodidad ergonómica
-          y estilo llamativo. Perfectos para jugadores que valoran
-          tanto el rendimiento como el diseño vibrante.</p>
-        <br>
+          y estilo llamativo.</p>
         <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
-
       </ion-card-content>
     </ion-card>
   </div>
