--- a/src/app/pages/productos/ai1/ai1.page.html
+++ b/src/app/pages/productos/ai1/ai1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <app-componente1></app-componente1>
 </ion-header>
-  <!--################################################PRODUCTOS########################################-->
+<!--################################################PRODUCTOS########################################-->
 
 <ion-content class="ion-padding">
   <div class="card-container">
@@ -9,17 +9,13 @@
       <img src="assets/AUDIFONOS BLUTU/a1.jpg" alt="" class="card-image">
       <ion-card-content class="card-content">
         <ion-card-title class="titulo">Audífonos Bluetooth morados</ion-card-title>
-        <br>
         <p class="subti" style="font-size: 25px;">Precio: $39.990</p>
-        <br>
         <p class="subti">Descripción:</p>
-        <p>Audífonos Bluetooth en tono morado,
-           ofrecen conectividad sin cables con estilo.
-            Perfectos para quienes buscan comodidad y 
-            libertad en su experiencia auditiva..</p>
-          <br>
-          <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
-
+        <p>Estos audofnos con tono morado,
+          ofrecen conectividad sin cables con estilo.
+          Perfectos para quienes buscan comodidad y
+          libertad en su experiencia auditiva.</p>
+        <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
       </ion-card-content>
     </ion-card>
   </div>
