--- a/src/app/pages/productos/ai4/ai4.page.html
+++ b/src/app/pages/productos/ai4/ai4.page.html
@@ -1,25 +1,21 @@
 <ion-header [translucent]="true">
   <app-componente1></app-componente1>
 </ion-header>
-  <!--################################################PRODUCTOS########################################-->
+<!--################################################PRODUCTOS########################################-->
 <ion-content class="ion-padding">
   <div class="card-container">
     <ion-card class="custom-card">
       <img src="assets/AUDIFONOS BLUTU/a4.jpg" alt="" class="card-image">
       <ion-card-content class="card-content">
         <ion-card-title class="titulo">Audífonos Bluetooth azules</ion-card-title>
-        <br>
         <p class="subti" style="font-size: 25px;">Precio: $42.000</p>
-        <br>
         <p class="subti">Descripción:</p>
-        <p>Audífonos Bluetooth en tono azul,
-           ofrecen conectividad inalámbrica con
-            un toque de frescura. Ideales para quienes
-             buscan comodidad y estilo en su experiencia
-              auditiva sin necesidad de cables..</p>
-          <br>
-          <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
-
+        <p>Estos audífonos en tono azul,
+          ofrecen conectividad inalámbrica con
+          un toque de frescura. Ideales para quienes
+          buscan comodidad y estilo en su experiencia
+          auditiva sin necesidad de cables..</p>
+        <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
       </ion-card-content>
     </ion-card>
   </div>
