--- a/src/app/pages/productos/ai6/ai6.page.html
+++ b/src/app/pages/productos/ai6/ai6.page.html
@@ -2,25 +2,21 @@
   <app-componente1></app-componente1>
 </ion-header>
 
-  <!--################################################PRODUCTOS########################################-->
+<!--################################################PRODUCTOS########################################-->
 <ion-content class="ion-padding">
   <div class="card-container">
     <ion-card class="custom-card">
       <img src="assets/AUDIFONOS BLUTU/a6.jpg" alt="" class="card-image">
       <ion-card-content class="card-content">
         <ion-card-title class="titulo">Audífonos Bluetooth verde</ion-card-title>
-        <br>
         <p class="subti" style="font-size: 25px;">Precio: $269.000</p>
-        <br>
         <p class="subti">Descripción:</p>
-        <p>Audífonos Bluetooth en verde, 
+        <p>Estos audífonos,
           brindan conectividad inalámbrica
-           con un toque de naturaleza. Perfectos
-            para quienes desean comodidad y un 
-            estilo distintivo en sus dispositivos de audio.</p>
-          <br>
-          <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
-
+          con un toque de naturaleza. Perfectos
+          para quienes desean comodidad y un
+          estilo distintivo en sus dispositivos de audio.</p>
+        <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
       </ion-card-content>
     </ion-card>
   </div>
