--- a/src/app/pages/productos/rd2/rd2.page.html
+++ b/src/app/pages/productos/rd2/rd2.page.html
@@ -1,28 +1,21 @@
 <ion-header [translucent]="true">
   <app-componente1></app-componente1>
 </ion-header>
-  <!--################################################PRODUCTOS########################################-->
+<!--################################################PRODUCTOS########################################-->
 
 <ion-content class="ion-padding">
   <div class="card-container">
     <ion-card class="custom-card">
       <img src="assets/digitales/rd2.jpeg" alt="" class="card-image">
       <ion-card-content class="card-content">
-        <ion-card-title class="titulo" style="font-size: 50px;">Reloj Digital negro con borde azul</ion-card-title>
-        <br>
+        <ion-card-title class="titulo">Reloj Digital negro con borde azul</ion-card-title>
         <p class="subti" style="font-size: 25px;">Precio: $61.990</p>
-        <br>
         <p class="subti">Descripción:</p>
         <p>Reloj digital en negro
-           con borde azul, fusiona
-            elegancia con un toque 
-            de estilo contemporáneo. 
-            Ideal para quienes buscan
-             una forma moderna de ver 
-             la hora y otras funciones, con un diseño llamativo.</p>
-        <br>
+          con borde azul, fusiona
+          elegancia con un toque
+          de estilo contemporáneo.</p>
         <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
-
       </ion-card-content>
     </ion-card>
   </div>
