--- a/src/app/pages/productos/rd5/rd5.page.html
+++ b/src/app/pages/productos/rd5/rd5.page.html
@@ -1,24 +1,21 @@
 <ion-header [translucent]="true">
   <app-componente1></app-componente1>
 </ion-header>
-  <!--################################################PRODUCTOS########################################-->
+<!--################################################PRODUCTOS########################################-->
 <ion-content class="ion-padding">
   <div class="card-container">
     <ion-card class="custom-card">
       <img src="assets/digitales/rd5.jpg" alt="" class="card-image">
       <ion-card-content class="card-content">
         <ion-card-title class="titulo">Reloj Digital negro</ion-card-title>
-        <br>
         <p class="subti" style="font-size: 25px;">Precio: $54.000</p>
-        <br>
         <p class="subti">Descripción:</p>
-        <p>Reloj digital en negro, brinda 
+        <p>Reloj digital en negro, brinda
           una estética moderna y minimalista.
-           Ideal para quienes buscan simplicidad 
-           y funcionalidad en la visualización de 
-           la hora y otras características, manteniendo un estilo elegante.</p>
+          Ideal para quienes buscan simplicidad
+          y funcionalidad en la visualización de
+          la hora, manteniendo un estilo elegante.</p>
         <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
-
       </ion-card-content>
     </ion-card>
   </div>
