--- a/src/app/pages/productos/rs1/rs1.page.html
+++ b/src/app/pages/productos/rs1/rs1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <app-componente1></app-componente1>
 </ion-header>
-  <!--################################################PRODUCTOS########################################-->
+<!--################################################PRODUCTOS########################################-->
 
 <ion-content class="ion-padding">
   <div class="card-container">
@@ -9,17 +9,15 @@
       <img src="assets/SMARTWATCH/rs1.webp" alt="" class="card-image">
       <ion-card-content class="card-content">
         <ion-card-title class="titulo">Reloj Smartwatch azul </ion-card-title>
-        <br>
         <p class="subti" style="font-size: 25px;">Precio: $139.990</p>
         <p class="subti">Descripción:</p>
-        <p>El Smartwatch Azul es un reloj
-           moderno con funciones inteligentes.
-            Con pantalla táctil y conexión al
-            teléfono, muestra notificaciones 
-            y rastrea la salud. Diseño atractivo 
-            y personalizable. Accesorio funcional y elegante.</p>
+        <p>Este Smartwatch es un reloj
+          moderno con funciones inteligentes.
+          Con pantalla táctil y conexión al
+          teléfono, muestra notificaciones
+          y rastrea la salud. Diseño atractivo
+          y personalizable.</p>
         <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
-
       </ion-card-content>
     </ion-card>
   </div>
